database entity updated so now it works

--- a/EntityWPFChat/App.config
+++ b/EntityWPFChat/App.config
@@ -18,6 +18,18 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelContext" connectionString="data source=92.52.130.3;initial catalog=EntityWPFChat.ModelContext;User id =user; password=qwe123; MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ModelContext" connectionString="data source=92.52.130.3;
+         initial catalog=EntityWPFChat.ModelContext;
+         User id =user;
+         password=qwe123;
+         MultipleActiveResultSets=True;
+         App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Somee" connectionString="
+         packet size=4096;
+         MultipleActiveResultSets=True;
+         user id=martcs_SQLLogin_1;
+         pwd=hgvckeeeh7;
+         data source=martcsdatabase.mssql.somee.com;
+         initial catalog=martcsdatabase" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
